--- a/templates/home_application/index.html
+++ b/templates/home_application/index.html
@@ -1,178 +1,79 @@
-<!DOCTYPE html>
-<html lang="en">
+<%inherit file="base.html"/>
 
-<head>
-    <meta charset="UTF-8">
-    <title>首页</title>
-    <link href="https://magicbox.bk.tencent.com/static_api/v3/assets/bootstrap-3.3.4/css/bootstrap.min.css"
-          rel="stylesheet">
-    <link href="https://magicbox.bk.tencent.com/static_api/v3/assets/bk-icon-2.0/iconfont.css" rel="stylesheet">
-    <link href="https://magicbox.bk.tencent.com/static_api/v3/bk/css/bk.css" rel="stylesheet">
-    <link href="https://magicbox.bk.tencent.com/static_api/v3/bk/css-pro/bk.css" rel="stylesheet">
-    <script src="https://magicbox.bk.tencent.com/static_api/v3/assets/js/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript">
-        var app_id = "${APP_ID}";
-        var site_url = "${SITE_URL}";	  // app的url前缀,在ajax调用的时候，应该加上该前缀
-        var static_url = "${STATIC_URL}"; // 静态资源前缀
-    </script>
-    <script src="${STATIC_URL}js/csrftoken.js?v=${STATIC_VERSION}" type="text/javascript"></script>
-    <link href="${STATIC_URL}css/common.css" rel="stylesheet">
-    <link href="${STATIC_URL}css/index.css" rel="stylesheet">
-</head>
-
-<body>
-
-<nav class="bk-horz-nav bk-horz-nav-min">
-    <div class="bk-nav-logo fl">
-        <img src="${STATIC_URL}img/logo.jpg">
-        太原理工大学
+<%block name="content">
+<div class="page-content">
+    <div class="king-page-topbar pl20 pr20">
+        <ul class="breadcrumb king-breadcrumb pl0 bg-transparent">
+            <li>学生管理</li>
+            <li class="active">基本信息</li>
+        </ul>
     </div>
-    <div class="bk-nav-user fr">
-        <span class="mr5">admin</span>
-        <img src="https://magicbox.bk.tencent.com/static_api/v3/components_pro/horizontal_nav1/images/avatar.png">
-    </div>
-    <ul class="bk-nav-links fr">
-        <li class="">
-            <a href="javascript:;">设置</a>
-        </li>
-    </ul>
-</nav>
-
-<div class="bk-layout bk-layout-has-sidebar" style="height:calc(100% - 60px)">
-    <div class="bk-sidebar slide-close">
-        <div class="slide-switch">
-            <i class="icon bk-icon icon-dedent f14"></i>
-        </div>
-        <div class="nav-list">
-            <ul>
-                <li>
-                    <a href="javascript:;">
-                      <span class="icon-box">
-                        <i class="bk-icon icon-plus-square"></i>
-                      </span>
-                        <span class="nav-name">学生管理</span>
-                    </a>
-                    <div class="flex-subnavs">
-                        <a href="javascript:;"><i></i>基本信息</a>
-                        <a href="javascript:;"><i></i>助学金信息</a>
-                        <a href="javascript:;"><i></i>奖学金信息</a>
+    <div class="bk-panel mb20">
+        <div class="bk-panel-body p25">
+            <div class="row">
+                <form class="form-inline">
+                    <div class="form-group mr5">
+                        <label for="exampleInputName2">用户名：</label>
+                        <input type="text" class="form-control" id="name" placeholder="请输入用户名">
                     </div>
-                </li>
-                <li>
-                    <a href="javascript:;">
-                      <span class="icon-box">
-                        <i class="bk-icon icon-plus-square"></i>
-                      </span>
-                        <span class="nav-name">班级管理</span>
-                    </a>
-                    <div class="flex-subnavs">
-                        <a href="javascript:;"><i></i>班级信息</a>
-                        <a href="javascript:;"><i></i>助学金信息</a>
-                        <a href="javascript:;"><i></i>奖学金信息</a>
+
+                    <div class="form-group mr5">
+                        <label for="exampleInputEmail2">学号：</label>
+                        <input type="email" class="form-control" id="sn" placeholder="请输入学号">
                     </div>
-                </li>
-                <li>
-                    <a href="javascript:;">
-                      <span class="icon-box">
-                        <i class="bk-icon icon-plus-square"></i>
-                      </span>
-                        <span class="nav-name">教师管理</span>
-                    </a>
-                    <div class="flex-subnavs">
-                        <a href="javascript:;"><i></i>基本信息</a>
-                        <a href="javascript:;"><i></i>助学金信息</a>
-                        <a href="javascript:;"><i></i>奖学金信息</a>
+                    <div class="form-group mr5">
+                        <label for="exampleInputEmail2">班级：</label>
+                        <select name="" id="class_id" class="form-control">
+                            %for classInfo in classes:
+                            <option value="${classInfo['id']}">${classInfo['sn']}</option>
+                            %endfor
+                        </select>
                     </div>
-                </li>
-            </ul>
-        </div>
-        <!--div class="copyright">
-            <p>Copyright &copy; 2012-2017 蓝鲸智云.</p>
-            <span>All Rights Reserved.</span>
-        </div -->
-    </div>
+                    <div class="form-group mr5">
+                        <label for="exampleInputEmail2">专业：</label>
+                        <select name="" id="profession_id" class="form-control">
+                            %for profession in professions:
+                            <option value="${profession['id']}">${profession['name']}</option>
+                            %endfor
+                        </select>
+                    </div>
+                    <div class="form-group mr5">
+                        <label for="exampleInputEmail2">性别：</label>
+                        <select name="" id="class_id" class="form-control">
+                            <option value="man">男</option>
+                            <option value="woman">女</option>
+                        </select>
+                    </div>
 
-    <div class="page-content">
-        <div class="king-page-topbar pl20 pr20">
-            <ul class="breadcrumb king-breadcrumb pl0 bg-transparent">
-                <li>学生管理</li>
-                <li class="active">基本信息</li>
-            </ul>
-        </div>
-        <div class="bk-panel mb20">
-            <div class="bk-panel-body p25">
-                <div class="row">
-                    <form class="form-inline">
-                        <div class="form-group mr5">
-                            <label for="exampleInputName2">用户名：</label>
-                            <input type="text" class="form-control" id="name" placeholder="请输入用户名">
-                        </div>
-
-                        <div class="form-group mr5">
-                            <label for="exampleInputEmail2">学号：</label>
-                            <input type="email" class="form-control" id="sn" placeholder="请输入学号">
-                        </div>
-                        <div class="form-group mr5">
-                            <label for="exampleInputEmail2">班级：</label>
-                            <select name="" id="class_id" class="form-control">
-                                %for classInfo in classes:
-                                <option value="${classInfo['id']}">${classInfo['sn']}</option>
-                                %endfor
-                            </select>
-                        </div>
-                        <div class="form-group mr5">
-                            <label for="exampleInputEmail2">专业：</label>
-                            <select name="" id="profession_id" class="form-control">
-                                %for profession in professions:
-                                <option value="${profession['id']}">${profession['name']}</option>
-                                %endfor
-                            </select>
-                        </div>
-                        <div class="form-group mr5">
-                            <label for="exampleInputEmail2">性别：</label>
-                            <select name="" id="class_id" class="form-control">
-                                <option value="man">男</option>
-                                <option value="woman">女</option>
-                            </select>
-                        </div>
-
-                        <button type="button" class="king-btn king-info" onclick="search()">查询</button>
-                    </form>
-                </div>
+                    <button type="button" class="king-btn king-info" onclick="search()">查询</button>
+                </form>
             </div>
-            <div class="row mt10 ml10">
-                <button type="button" class="king-btn king-info" onclick="studentAdd()">添加</button>
-            </div>
-            <div class="king-block king-block-bordered">
-                <div class="king-block-content">
-                    <table id="table2_demo1" class="table table-bordered table-hover">
-                        <thead>
-                        <tr>
-                            <th>姓名</th>
-                            <th>学号</th>
-                            <th>性别</th>
-                            <th>专业</th>
-                            <th>班级</th>
-                            <th>电话</th>
-                            <th>宿舍</th>
-                            <th>操作</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        </tbody>
-                    </table>
-                </div>
+        </div>
+        <div class="row mt10 ml10">
+            <button type="button" class="king-btn king-info" onclick="studentAdd()">添加</button>
+        </div>
+        <div class="king-block king-block-bordered">
+            <div class="king-block-content">
+                <table id="table2_demo1" class="table table-bordered table-hover">
+                    <thead>
+                    <tr>
+                        <th>姓名</th>
+                        <th>学号</th>
+                        <th>性别</th>
+                        <th>专业</th>
+                        <th>班级</th>
+                        <th>电话</th>
+                        <th>宿舍</th>
+                        <th>操作</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
 </div>
-
-<script src="${STATIC_URL}js/common.js"></script>
-<script src="${STATIC_URL}js/index.js"></script>
-<script src="https://magicbox.bk.tencent.com/static_api/v3/assets/datatables-1.10.7/jquery.dataTables.js"
-        type="text/javascript"></script>
-<script src="https://magicbox.bk.tencent.com/static_api/v3/assets/datatables-1.10.7/dataTables.bootstrap.js"
-        type="text/javascript"></script>
 <script type="text/javascript">
     $(function () {
         //table2_demo1_js_start
@@ -276,6 +177,4 @@
         }
     }
 </script>
-</body>
-
-</html>
+</%block>
