--- a/templates/home_application/base.html
+++ b/templates/home_application/base.html
@@ -21,7 +21,7 @@
     <link href="${STATIC_URL}css/index.css" rel="stylesheet">
 </head>
 
-<body>
+<body id="bodyElement">
 
 <nav class="bk-horz-nav bk-horz-nav-min">
     <div class="bk-nav-logo fl">
@@ -39,13 +39,18 @@
     </ul>
 </nav>
 
-<div class="bk-layout bk-layout-has-sidebar" style="height:calc(100% - 60px)">
+<div class="bk-layout bk-layout-has-sidebar" id="contentDiv" style="height:calc(100% - 60px)">
     <div class="bk-sidebar slide-close">
-        <div class="slide-switch">
-            <i class="icon bk-icon icon-dedent f14"></i>
-        </div>
         <div class="nav-list">
             <ul>
+                <li class="active">
+                    <a href="/overview/">
+                      <span class="icon-box">
+                        <i class="fa fa-graduation-cap"></i>
+                      </span>
+                        <span class="nav-name">概览</span>
+                    </a>
+                </li>
                 <li class="active">
                     <a href="/">
                       <span class="icon-box">
@@ -77,7 +82,8 @@
         </div>
     </div>
 
-    <%block name='content'></%block>
+    <%block name='content'>
+    </%block>
 </div>
 
 <script src="${STATIC_URL}js/common.js"></script>
@@ -86,6 +92,7 @@
         type="text/javascript"></script>
 <script src="https://magicbox.bk.tencent.com/static_api/v3/assets/datatables-1.10.7/dataTables.bootstrap.js"
         type="text/javascript"></script>
+<script src="https://magicbox.bk.tencent.com/static_api/v3/assets/echarts-2.0/echarts-all.js"></script>
 </body>
 
 </html>
