--- a/templates/home_application/detail.html
+++ b/templates/home_application/detail.html
@@ -1,260 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
+<%inherit file="base.html"/>
 
-<head>
-    <meta charset="UTF-8">
-    <title>首页</title>
-    <link href="https://magicbox.bk.tencent.com/static_api/v3/assets/bootstrap-3.3.4/css/bootstrap.min.css"
-          rel="stylesheet">
-    <link href="https://magicbox.bk.tencent.com/static_api/v3/assets/bk-icon-2.0/iconfont.css" rel="stylesheet">
-    <link href="https://magicbox.bk.tencent.com/static_api/v3/bk/css/bk.css" rel="stylesheet">
-    <link href="https://magicbox.bk.tencent.com/static_api/v3/bk/css-pro/bk.css" rel="stylesheet">
-    <script src="https://magicbox.bk.tencent.com/static_api/v3/assets/js/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript">
-        var app_id = "${APP_ID}";
-        var site_url = "${SITE_URL}";	  // app的url前缀,在ajax调用的时候，应该加上该前缀
-        var static_url = "${STATIC_URL}"; // 静态资源前缀
-    </script>
-    <script src="${STATIC_URL}js/csrftoken.js?v=${STATIC_VERSION}" type="text/javascript"></script>
-    <link href="${STATIC_URL}css/common.css" rel="stylesheet">
-    <link href="${STATIC_URL}css/index.css" rel="stylesheet">
-</head>
-
-<body>
-
-<nav class="bk-horz-nav bk-horz-nav-min">
-    <div class="bk-nav-logo fl">
-        <img src="${STATIC_URL}img/logo.jpg">
-        太原理工大学
-    </div>
-    <div class="bk-nav-user fr">
-        <span class="mr5">admin</span>
-        <img src="https://magicbox.bk.tencent.com/static_api/v3/components_pro/horizontal_nav1/images/avatar.png">
-    </div>
-    <ul class="bk-nav-links fr">
-        <li class="">
-            <a href="javascript:;">设置</a>
-        </li>
-    </ul>
-</nav>
-
-<div class="bk-layout bk-layout-has-sidebar" style="height:calc(100% - 60px)">
-    <div class="bk-sidebar slide-close">
-        <div class="slide-switch">
-            <i class="icon bk-icon icon-dedent f14"></i>
-        </div>
-        <div class="nav-list">
-            <ul>
-                <li>
-                    <a href="javascript:;">
-                      <span class="icon-box">
-                        <i class="bk-icon icon-plus-square"></i>
-                      </span>
-                        <span class="nav-name">学生管理</span>
-                    </a>
-                    <div class="flex-subnavs">
-                        <a href="javascript:;"><i></i>基本信息</a>
-                        <a href="javascript:;"><i></i>助学金信息</a>
-                        <a href="javascript:;"><i></i>奖学金信息</a>
-                    </div>
-                </li>
-                <li>
-                    <a href="javascript:;">
-                      <span class="icon-box">
-                        <i class="bk-icon icon-plus-square"></i>
-                      </span>
-                        <span class="nav-name">班级管理</span>
-                    </a>
-                    <div class="flex-subnavs">
-                        <a href="javascript:;"><i></i>班级信息</a>
-                        <a href="javascript:;"><i></i>助学金信息</a>
-                        <a href="javascript:;"><i></i>奖学金信息</a>
-                    </div>
-                </li>
-                <li>
-                    <a href="javascript:;">
-                      <span class="icon-box">
-                        <i class="bk-icon icon-plus-square"></i>
-                      </span>
-                        <span class="nav-name">教师管理</span>
-                    </a>
-                    <div class="flex-subnavs">
-                        <a href="javascript:;"><i></i>基本信息</a>
-                        <a href="javascript:;"><i></i>助学金信息</a>
-                        <a href="javascript:;"><i></i>奖学金信息</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-        <!--div class="copyright">
-            <p>Copyright &copy; 2012-2017 蓝鲸智云.</p>
-            <span>All Rights Reserved.</span>
-        </div -->
-    </div>
-
-    <div class="page-content">
-        <div class="king-page-topbar pl20 pr20">
-            <ul class="breadcrumb king-breadcrumb pl0 bg-transparent">
-                <li>学生管理</li>
-                <li>基本信息</li>
-                <li class="active">学生信息详情</li>
-            </ul>
-        </div>
-        <div class="bk-panel mb20">
-            <div class="bk-panel-body p25">
-                <div class="row">
-                    <form class="form-inline">
-                        <div class="form-group mr5">
-                            <label for="exampleInputName2">用户名：</label>
-                            <input type="text" class="form-control" id="name" placeholder="请输入用户名">
-                        </div>
-
-                        <div class="form-group mr5">
-                            <label for="exampleInputEmail2">学号：</label>
-                            <input type="email" class="form-control" id="sn" placeholder="请输入学号">
-                        </div>
-                        <div class="form-group mr5">
-                            <label for="exampleInputEmail2">班级：</label>
-                            <input type="email" class="form-control" id="class_sn" placeholder="请输入班级">
-                        </div>
-                        <div class="form-group mr5">
-                            <label for="exampleInputEmail2">专业：</label>
-                            <input type="email" class="form-control" id="profession_sn" placeholder="请输入专业">
-                        </div>
-                        <div class="form-group mr5">
-                            <label for="exampleInputEmail2">性别：</label>
-                            <input type="email" class="form-control" id="sex" placeholder="请输入性别">
-                        </div>
-
-                        <button type="button" class="king-btn king-info">查询</button>
-                    </form>
-                </div>
+<%block name="content">
+<div class="page-content" id="background">
+    <div class="bk-panel mb20">
+        <ul>
+            <li><span>姓名:</span><span>${student['name']}</span></li>
+            <li><span>学号:</span><span>${student['sn']}</span></li>
+            <li><span>班级:</span><span>${student['class_name']}</span></li>
+            <li><span>专业:</span><span>${student['profession_name']}</span></li>
+            <li><span>宿舍:</span><span>${student['dorm_sn']}</span></li>
+            <li><span>性别:</span><span>${student['sex']}</span></li>
+            <li><span>生日:</span><span>${student['name']}</span></li>
+            <li><span>身份证:</span><span>${student['id_card']}</span></li>
+            <li><span>政治面貌:</span><span>${student['politics']}</span></li>
+            <li><span>籍贯:</span><span>${student['hometown']}</span></li>
+            <li><span>国家:</span><span>${student['country']}</span></li>
+            <li><span>民族:</span><span>${student['country']}</span></li>
+            <li><span>电话:</span><span>${student['phone']}</span></li>
+            <li><span>紧急联系电话:</span><span>${student['emergency_phone']}</span></li>
+            <li><span>家庭住址:</span><span>${student['address']}</span></li>
+            <li><span>QQ:</span><span>${student['qq']}</span></li>
+            <li><span>Email:</span><span>${student['email']}</span></li>
+        </ul>
+        <form class="form-horizontal">
+            <div class="form-group">
+                <input type="reset" class="king-btn king-default" onclick="backToStudentList()"
+                       value="取消"/>
             </div>
-            <div class="row mt10 ml10">
-                <button type="button" class="king-btn king-info">添加</button>
-            </div>
-            <div class="king-block king-block-bordered">
-                <div class="king-block-content">
-                    <table id="table2_demo1" class="table table-bordered table-hover">
-                        <thead>
-                        <tr>
-                            <th>姓名</th>
-                            <th>学号</th>
-                            <th>性别</th>
-                            <th>专业</th>
-                            <th>班级</th>
-                            <th>电话</th>
-                            <th>宿舍</th>
-                            <th>操作</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
+        </form>
     </div>
 </div>
-
-<script src="${STATIC_URL}js/common.js"></script>
-<script src="${STATIC_URL}js/index.js"></script>
-<script src="https://magicbox.bk.tencent.com/static_api/v3/assets/datatables-1.10.7/jquery.dataTables.js"
-        type="text/javascript"></script>
-<script src="https://magicbox.bk.tencent.com/static_api/v3/assets/datatables-1.10.7/dataTables.bootstrap.js"
-        type="text/javascript"></script>
 <script type="text/javascript">
-    $(function () {
-        //table2_demo1_js_start
-        //表格(DataTables)-1，html数据源
-        var language = {
-            search: '搜索：',
-            lengthMenu: "每页显示 _MENU_ 记录",
-            zeroRecords: "没找到相应的数据！",
-            info: "分页 _PAGE_ / _PAGES_",
-            infoEmpty: "暂无数据！",
-            infoFiltered: "(从 _MAX_ 条数据中搜索)",
-            paginate: {
-                first: '首页',
-                last: '尾页',
-                previous: '上一页',
-                next: '下一页',
-            }
-        }
-        $('#table2_demo1').dataTable({
-            paging: true, //隐藏分页
-            ordering: false, //关闭排序
-            info: false, //隐藏左下角分页信息
-            searching: false, //关闭搜索
-            pageLength: 5, //每页显示几条数据
-            lengthChange: false, //不允许用户改变表格每页显示的记录数
-            language: language, //汉化
-            ajax: {
-                url: site_url + 'student/',
-                type: 'POST',
-                dataSrc: function (res) {
-                    return JSON.parse(res.message);
-                },
-            },
-            columns: [
-                {
-                    data: "name",
-                    render: function (data, type, row) {
-                        return "<a href='javascript:void(0); onclick=showDetail(" + row['id'] + ")'>" + row['name'] + "</a>"
-                    }
-                },
-                {
-                    data: "sn"
-                },
-                {
-                    data: 'sex'
-                },
-                {
-                    data: "profession_name"
-                },
-                {
-                    data: "class_name"
-                },
-                {
-                    data: "phone"
-                },
-                {
-                    data: "dorm_sn"
-                },
-                {
-                    data: "id",
-                    render: function (data, type, row) {
-                        return "<a href='javascript:void(0)'; onclick=editStudentInfo(" + data + ")>b</a> | <a href='javascript:void(0)'; onclick=deleteStudentInfo(" + data + ")>删除</a>"
-
-                    }
-                }
-            ]
-        });
-    });
-
-    function showDetail(id) {
-
-    }
-
-    function editStudentInfo(id) {
-
-    }
-
-    function deleteStudentInfo(id) {
-        if (window.confirm("确定删除学生信息")) {
-            $.ajax({
-                url: site_url + 'student/delete/',
-                type: "POST",
-                data: {
-                    "id": id
-                },
-                success: function (res) {
-                    window.location.reload()
-                }
-            })
-        }
+    function backToStudentList() {
+        window.location.href = site_url
     }
 </script>
-</body>
-
-</html>
+</%block>
