--- a/templates/home_application/overview.html
+++ b/templates/home_application/overview.html
@@ -169,7 +169,7 @@
     }
 
     $(function () {
-        setBackGroundImg();
+        // setBackGroundImg();
         initEPieChart({
             url: '/overview/student/chart/',
             dataType: 'json',
