--- a/templates/home_application/overview.html
+++ b/templates/home_application/overview.html
@@ -177,16 +177,16 @@
             chartType: 'pie'
         });
         initEBarChart({
-            url: 'https://magicbox.bk.tencent.com/static_api/v3/components/chart2/demo.json',
+            url: '/overview/student/politics/chart/',
             dataType: 'json',
             containerId: 'chart2',
             chartType: 'line'
         });
-        initEStandLineChart({
-            url: 'https://magicbox.bk.tencent.com/static_api/v3/components/chart3/demo.json',
+        initEPieChart({
+            url: '/overview/student/country/chart/',
             dataType: 'json',
             containerId: 'chart3',
-            chartType: 'bar'
+            chartType: 'pie'
         });
     });
     //chart4_demo1_js_end
