--- a/templates/home_application/student_add.html
+++ b/templates/home_application/student_add.html
@@ -22,7 +22,7 @@
                                 <label for="inputCount3" class="col-sm-3 control-label">姓名：</label>
                                 <div class="col-sm-7">
                                     <input type="text" class="form-control" id="name"
-                                           placeholder="输入学生姓名">
+                                           placeholder="输入学生姓名" value="${student_info.get('name')}" }>
                                 </div>
                                 <span class="text-danger mt5 fl">*</span>
                             </div>
@@ -30,7 +30,7 @@
                                 <label for="inputCount3" class="col-sm-3 control-label">学号：</label>
                                 <div class="col-sm-7">
                                     <input type="text" class="form-control" id="sn"
-                                           placeholder="输入学生学号">
+                                           placeholder="输入学生学号" value="${student_info.get('sn')}" }>
                                 </div>
                                 <span class="text-danger mt5 fl">*</span>
                             </div>
@@ -38,8 +38,13 @@
                                 <label for="inputEmail3" class="col-sm-3 control-label">性别：</label>
                                 <div class="col-sm-7">
                                     <select name="" id="sex" class="form-control">
-                                        <option value="man">男</option>
+                                        %if student_info.get('sex') == "man":
+                                        <option value="man" selected>男</option>
                                         <option value="woman">女</option>
+                                        %else:
+                                        <option value="man">男</option>
+                                        <option value="woman" selected>女</option>
+                                        %endif
                                     </select>
                                 </div>
                                 <span class="text-danger mt5 fl">*</span>
@@ -80,21 +85,25 @@
                             <div class="form-group">
                                 <label for="inputEmail3" class="col-sm-3 control-label">出生年月：</label>
                                 <div class="col-sm-7">
-                                    <input type="date" id="birthday" class="form-control">
+                                    <input type="date" id="birthday" class="form-control" value="${student_info.get('birthday')}">
                                 </div>
                                 <span class="text-danger mt5 fl">*</span>
                             </div>
                             <div class="form-group">
                                 <label for="inputPassword3" class="col-sm-3 control-label">证件号码：</label>
                                 <div class="col-sm-7">
+                                    %if student_info.get("id_card"):
+                                    <input type="text" class="form-control" id="id_card" placeholder="" value="${student_info.get('id_card')}">
+                                    %else:
                                     <input type="text" class="form-control" id="id_card" placeholder="">
+                                    %endif
                                 </div>
                                 <span class="text-danger mt5 fl">*</span>
                             </div>
                             <div class="form-group">
                                 <label for="inputPassword3" class="col-sm-3 control-label">电话：</label>
                                 <div class="col-sm-7">
-                                    <input type="text" class="form-control" id="phone" placeholder="">
+                                    <input type="text" class="form-control" id="phone" placeholder="" value="${student_info.get('phone')}">
                                 </div>
                                 <span class="text-danger mt5 fl">*</span>
                             </div>
@@ -133,31 +142,37 @@
                             <div class="form-group">
                                 <label class="control-label col-sm-3">籍贯：</label>
                                 <div class="col-sm-7">
-                                    <input type="text" id="hometown" class="form-control">
+                                    <input type="text" id="hometown" class="form-control" value="${student_info.get('hometown')}">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="inputPassword3" class="col-sm-3 control-label">紧急联系人：</label>
+                                <label for="inputPassword3" class="col-sm-3 control-label">父亲电话：</label>
                                 <div class="col-sm-7">
-                                    <input type="text" class="form-control" id="emergency_phone" placeholder="">
+                                    <input type="text" class="form-control" id="father_phone" placeholder="" value="${student_info.get('father_phone')}">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputPassword3" class="col-sm-3 control-label">母亲电话：</label>
+                                <div class="col-sm-7">
+                                    <input type="text" class="form-control" id="mother_phone" placeholder="" value="${student_info.get('mother_phone')}">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="inputPassword3" class="col-sm-3 control-label">家庭住址：</label>
                                 <div class="col-sm-7">
-                                    <input type="text" class="form-control" id="address" placeholder="">
+                                    <input type="text" class="form-control" id="address" placeholder="" value="${student_info.get('address')}">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="inputPassword3" class="col-sm-3 control-label">qq：</label>
                                 <div class="col-sm-7">
-                                    <input type="text" class="form-control" id="qq" placeholder="">
+                                    <input type="text" class="form-control" id="qq" placeholder="" value="${student_info.get('qq')}">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="inputPassword3" class="col-sm-3 control-label">邮箱：</label>
                                 <div class="col-sm-7">
-                                    <input type="text" class="form-control" id="email" placeholder="">
+                                    <input type="text" class="form-control" id="email" placeholder="" value="${student_info.get('email')}">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -199,7 +214,8 @@
                 country: $("#country").val(),
                 nation: $("#nation").val(),
                 hometown: $("#hometown").val().trim(),
-                emergencyPhone: $("#emergency_phone").val().trim(),
+                father_phone: $("#father_phone").val().trim(),
+                mother_phone: $("#mother_phone").val().trim(),
                 address: $("#address").val().trim(),
                 qq: $("#qq").val().trim(),
                 email: $("#email").val().trim()
