--- a/templates/home_application/student_add.html
+++ b/templates/home_application/student_add.html
@@ -6,7 +6,11 @@
         <ul class="breadcrumb king-breadcrumb pl0 bg-transparent">
             <li>学生管理</li>
             <li>基本信息</li>
+            %if student_info:
+            <li class="active">学生信息修改</li>
+            %else:
             <li class="active">学生添加</li>
+            %endif
         </ul>
     </div>
     <div class="bk-panel mb20">
@@ -21,22 +25,35 @@
                             <div class="form-group">
                                 <label for="inputCount3" class="col-sm-3 control-label">姓名：</label>
                                 <div class="col-sm-7">
+                                    %if student_info:
                                     <input type="text" class="form-control" id="name"
-                                           placeholder="输入学生姓名" value="${student_info.get('name')}" }>
+                                           placeholder="输入学生姓名" value="${student_info.get('name')}">
+                                    %else:
+                                    <input type="text" class="form-control" id="name"
+                                           placeholder="输入学生姓名">
+                                    %endif
                                 </div>
                                 <span class="text-danger mt5 fl">*</span>
                             </div>
                             <div class="form-group">
                                 <label for="inputCount3" class="col-sm-3 control-label">学号：</label>
+                                %if student_info:
                                 <div class="col-sm-7">
                                     <input type="text" class="form-control" id="sn"
-                                           placeholder="输入学生学号" value="${student_info.get('sn')}" }>
+                                           placeholder="输入学生学号" value="${student_info.get('sn')}">
                                 </div>
+                                %else:
+                                <div class="col-sm-7">
+                                    <input type="text" class="form-control" id="sn"
+                                           placeholder="输入学生学号">
+                                </div>
+                                %endif
                                 <span class="text-danger mt5 fl">*</span>
                             </div>
                             <div class="form-group">
                                 <label for="inputEmail3" class="col-sm-3 control-label">性别：</label>
                                 <div class="col-sm-7">
+                                    %if student_info:
                                     <select name="" id="sex" class="form-control">
                                         %if student_info.get('sex') == "man":
                                         <option value="man" selected>男</option>
@@ -46,6 +63,12 @@
                                         <option value="woman" selected>女</option>
                                         %endif
                                     </select>
+                                    %else:
+                                    <select name="" id="sex" class="form-control">
+                                        <option value="man">男</option>
+                                        <option value="woman">女</option>
+                                    </select>
+                                    %endif
                                 </div>
                                 <span class="text-danger mt5 fl">*</span>
                             </div>
@@ -85,25 +108,42 @@
                             <div class="form-group">
                                 <label for="inputEmail3" class="col-sm-3 control-label">出生年月：</label>
                                 <div class="col-sm-7">
-                                    <input type="date" id="birthday" class="form-control" value="${student_info.get('birthday')}">
-                                </div>
-                                <span class="text-danger mt5 fl">*</span>
-                            </div>
-                            <div class="form-group">
-                                <label for="inputPassword3" class="col-sm-3 control-label">证件号码：</label>
-                                <div class="col-sm-7">
-                                    %if student_info.get("id_card"):
-                                    <input type="text" class="form-control" id="id_card" placeholder="" value="${student_info.get('id_card')}">
+                                    %if student_info:
+                                    <input type="date" id="birthday" class="form-control"
+                                           value="${student_info.get('birthday')}">
                                     %else:
-                                    <input type="text" class="form-control" id="id_card" placeholder="">
+                                    <input type="date" id="birthday" class="form-control">
                                     %endif
                                 </div>
                                 <span class="text-danger mt5 fl">*</span>
                             </div>
                             <div class="form-group">
+                                <label for="inputPassword3" class="col-sm-3 control-label">证件号码：</label>
+                                %if student_info:
+                                <div class="col-sm-7">
+                                    %if student_info.get("id_card"):
+                                    <input type="text" class="form-control" id="id_card" placeholder=""
+                                           value="${student_info.get('id_card')}">
+                                    %else:
+                                    <input type="text" class="form-control" id="id_card" placeholder="">
+                                    %endif
+                                </div>
+                                %else:
+                                <div class="col-sm-7">
+                                    <input type="text" class="form-control" id="id_card" placeholder="">
+                                </div>
+                                %endif
+                                <span class="text-danger mt5 fl">*</span>
+                            </div>
+                            <div class="form-group">
                                 <label for="inputPassword3" class="col-sm-3 control-label">电话：</label>
                                 <div class="col-sm-7">
-                                    <input type="text" class="form-control" id="phone" placeholder="" value="${student_info.get('phone')}">
+                                    %if student_info:
+                                    <input type="text" class="form-control" id="phone" placeholder=""
+                                           value="${student_info.get('phone')}">
+                                    %else:
+                                    <input type="text" class="form-control" id="phone" placeholder="">
+                                    %endif
                                 </div>
                                 <span class="text-danger mt5 fl">*</span>
                             </div>
@@ -139,40 +179,92 @@
                                     </select>
                                 </div>
                             </div>
+                            <div class="form-group has-feedback">
+                                <label class="control-label col-sm-3" for="introduction">处分：</label>
+                                <div class="col-sm-7">
+                                    <select name="" id="student_info" class="form-control">
+                                        <option value="">无</option>
+                                        %for discipline in disciplines:
+                                        <option value="${discipline['id']}">${discipline['desc']}</option>
+                                        %endfor
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group has-feedback">
+                                <label class="control-label col-sm-3" for="introduction">活动：</label>
+                                <div class="col-sm-7">
+                                    <select name="" id="student_info" class="form-control">
+                                        <option value="">无</option>
+                                        %for active in activities:
+                                        <option value="${active['id']}">${active['name']}</option>
+                                        %endfor
+                                    </select>
+                                </div>
+                            </div>
                             <div class="form-group">
                                 <label class="control-label col-sm-3">籍贯：</label>
                                 <div class="col-sm-7">
-                                    <input type="text" id="hometown" class="form-control" value="${student_info.get('hometown')}">
+                                    %if student_info:
+                                    <input type="text" id="hometown" class="form-control"
+                                           value="${student_info.get('hometown')}">
+                                    %else:
+                                    <input type="text" id="hometown" class="form-control">
+                                    %endif
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="inputPassword3" class="col-sm-3 control-label">父亲电话：</label>
                                 <div class="col-sm-7">
-                                    <input type="text" class="form-control" id="father_phone" placeholder="" value="${student_info.get('father_phone')}">
+                                    %if student_info:
+                                    <input type="text" class="form-control" id="father_phone" placeholder=""
+                                           value="${student_info.get('father_phone')}">
+                                    %else:
+                                    <input type="text" class="form-control" id="father_phone" placeholder="">
+                                    %endif
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="inputPassword3" class="col-sm-3 control-label">母亲电话：</label>
                                 <div class="col-sm-7">
-                                    <input type="text" class="form-control" id="mother_phone" placeholder="" value="${student_info.get('mother_phone')}">
+                                    %if student_info:
+                                    <input type="text" class="form-control" id="mother_phone" placeholder=""
+                                           value="${student_info.get('mother_phone')}">
+                                    %else:
+                                    <input type="text" class="form-control" id="mother_phone" placeholder="">
+                                    %endif
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="inputPassword3" class="col-sm-3 control-label">家庭住址：</label>
                                 <div class="col-sm-7">
-                                    <input type="text" class="form-control" id="address" placeholder="" value="${student_info.get('address')}">
+                                    %if student_info:
+                                    <input type="text" class="form-control" id="address" placeholder=""
+                                           value="${student_info.get('address')}">
+                                    %else:
+                                    <input type="text" class="form-control" id="address" placeholder="">
+                                    %endif
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="inputPassword3" class="col-sm-3 control-label">qq：</label>
                                 <div class="col-sm-7">
-                                    <input type="text" class="form-control" id="qq" placeholder="" value="${student_info.get('qq')}">
+                                    %if student_info:
+                                    <input type="text" class="form-control" id="qq" placeholder=""
+                                           value="${student_info.get('qq')}">
+                                    %else:
+                                    <input type="text" class="form-control" id="qq" placeholder="">
+                                    %endif
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="inputPassword3" class="col-sm-3 control-label">邮箱：</label>
                                 <div class="col-sm-7">
-                                    <input type="text" class="form-control" id="email" placeholder="" value="${student_info.get('email')}">
+                                    %if student_info:
+                                    <input type="text" class="form-control" id="email" placeholder=""
+                                           value="${student_info.get('email')}">
+                                    %else:
+                                    <input type="text" class="form-control" id="email" placeholder="">
+                                    %endif
                                 </div>
                             </div>
                             <div class="form-group">
