首页数据图表改善

--- a/templates/home_application/index.html
+++ b/templates/home_application/index.html
@@ -120,7 +120,7 @@
                 {
                     data: "name",
                     render: function (data, type, row) {
-                        return "<a onclick=showDetail('"+ row["id"] +"')>" + row['name'] + "</a>"
+                        return "<a href='javascript:void()' onclick=showDetail('"+ row["id"] +"')>" + row['name'] + "</a>"
                     }
                 },
                 {
