--- a/templates/home_application/student_add.html
+++ b/templates/home_application/student_add.html
@@ -22,6 +22,11 @@
                     </div>
                     <div class="king-block-content">
                         <form class="form-horizontal" method="POST">
+                            %if student_info:
+                            <input type="text" id="studentId" style="display: none" value="${student_info.get('id')}">
+                            %else:
+                            <input type="text" id="studentId" style="display: none">
+                            %endif
                             <div class="form-group">
                                 <label for="inputCount3" class="col-sm-3 control-label">姓名：</label>
                                 <div class="col-sm-7">
@@ -293,6 +298,7 @@
             url: site_url + 'student/add/save/',
             type: 'POST',
             data: {
+                id: $("#studentId").val(),
                 name: $("#name").val().trim(),
                 sn: $("#sn").val().trim(),
                 sex: $("#sex").val(),
