--- a/templates/home_application/student_add.html
+++ b/templates/home_application/student_add.html
@@ -306,7 +306,7 @@
                 profession: $("#profession").val(),
                 dorm: $("#dorm").val(),
                 birthday: $("#birthday").val(),
-                idCard: $("#iud_card").val(),
+                id_card: $("#id_card").val(),
                 phone: $("#phone").val().trim(),
                 politics: $("#politics").val(),
                 country: $("#country").val(),
