奖学金管理

--- a/templates/home_application/base.html
+++ b/templates/home_application/base.html
@@ -75,6 +75,14 @@
                         <span class="nav-name">教师管理</span>
                     </a>
                 </li>
+                <li>
+                    <a href="/scholarship/page/">
+                      <span class="icon-box">
+                        <i class="fa fa-users"></i>
+                      </span>
+                        <span class="nav-name">奖学金管理 </span>
+                    </a>
+                </li>
             </ul>
         </div>
         <div class="copyright">
