--- a/templates/home_application/detail.html
+++ b/templates/home_application/detail.html
@@ -2,41 +2,173 @@
 
 <%block name="content">
 <div class="page-content" id="background">
-    <div class="bk-panel mb20">
-        <ul class="col-md-12">
-            <li><span>姓名:</span><span>${student['name']}</span></li>
-            <li><span>学号:</span><span>${student['sn']}</span></li>
-            <li><span>班级:</span><span>${student['class_name']}</span></li>
-            <li><span>专业:</span><span>${student['profession_name']}</span></li>
-            <li><span>宿舍:</span><span>${student['dorm_sn']}</span></li>
-            <li><span>性别:</span><span>${student['sex']}</span></li>
-            <li><span>生日:</span><span>${student['name']}</span></li>
-            <li><span>身份证:</span><span>${student['id_card']}</span></li>
-            <li><span>政治面貌:</span><span>${student['politics']}</span></li>
-            <li><span>籍贯:</span><span>${student['hometown']}</span></li>
-            <li><span>国家:</span><span>${student['country']}</span></li>
-            <li><span>民族:</span><span>${student['country']}</span></li>
-            <li><span>电话:</span><span>${student['phone']}</span></li>
-            <li><span>家庭住址:</span><span>${student['address']}</span></li>
-            <li><span>父亲电话:</span><span>${student['father_phone']}</span></li>
-            <li><span>母亲电话:</span><span>${student['mother_phone']}</span></li>
-            <li><span>QQ:</span><span>${student['qq']}</span></li>
-            <li><span>Email:</span><span>${student['email']}</span></li>
-            %for activity_name in student['activities']:
-            <li><span/>活动:<span>${activity_name}</span> </li>
-            %endfor
+    <div class="king-page-topbar pl20 pr20">
+        <ul class="breadcrumb king-breadcrumb pl0 bg-transparent">
+            <li>学生详细信息</li>
         </ul>
-        <form class="form-horizontal">
-            <div class="form-group">
-                <input type="reset" class="king-btn king-default" onclick="backToStudentList()"
-                       value="取消"/>
+    </div>
+    <div class="bk-panel mb20">
+        <div class="col-md-6 mt10">
+            <ul>
+                <li class="mt5"><span class="ml10 mr10">姓名:</span><span class="ml10 mr10">${student['name']}</span></li>
+                <li class="mt5"><span class="ml10 mr10">学号:</span><span class="ml10 mr10">${student['sn']}</span></li>
+                <li class="mt5"><span class="ml10 mr10">班级:</span><span
+                        class="ml10 mr10">${student['class_name']}</span></li>
+                <li class="mt5"><span class="ml10 mr10">专业:</span><span
+                        class="ml10 mr10">${student['profession_name']}</span></li>
+                <li class="mt5"><span class="ml10 mr10">宿舍:</span><span class="ml10 mr10">${student['dorm_sn']}</span>
+                </li>
+                <li class="mt5"><span class="ml10 mr10">性别:</span><span class="ml10 mr10">${student['sex']}</span></li>
+                <li class="mt5"><span class="ml10 mr10">生日:</span><span class="ml10 mr10">${student['name']}</span></li>
+                <li class="mt5"><span class="ml10 mr10">身份证:</span><span class="ml10 mr10">${student['id_card']}</span>
+                </li>
+                <li class="mt5"><span class="ml10 mr10">政治面貌:</span><span
+                        class="ml10 mr10">${student['politics']}</span></li>
+                %for activity_name in student['activities']:
+                <li><span class="ml10 mr10">活动:</span><span class="ml10 mr10">${activity_name}</span></li>
+                %endfor
+            </ul>
+        </div>
+        <div class="col-md-6 mt10">
+            <ul>
+                <li class="mt5"><span class="ml10 mr10">籍贯:</span><span class="ml10 mr10">${student['hometown']}</span>
+                </li>
+                <li class="mt5"><span class="ml10 mr10">国家:</span><span class="ml10 mr10">${student['country']}</span>
+                </li>
+                <li class="mt5"><span class="ml10 mr10">民族:</span><span class="ml10 mr10">${student['country']}</span>
+                </li>
+                <li class="mt5"><span class="ml10 mr10">电话:</span><span class="ml10 mr10">${student['phone']}</span>
+                </li>
+                <li class="mt5"><span class="ml10 mr10">家庭住址:</span><span class="ml10 mr10">${student['address']}</span>
+                </li>
+                <li class="mt5"><span class="ml10 mr10">父亲电话:</span><span
+                        class="ml10 mr10">${student['father_phone']}</span></li>
+                <li class="mt5"><span class="ml10 mr10">母亲电话:</span><span
+                        class="ml10 mr10">${student['mother_phone']}</span></li>
+                <li class="mt5"><span class="ml10 mr10">QQ:</span><span class="ml10 mr10">${student['qq']}</span></li>
+                <li class="mt5"><span class="ml10 mr10">Email:</span><span class="ml10 mr10">${student['email']}</span>
+                </li>
+            </ul>
+        </div>
+        <hr/>
+        <div class="col-md-6 mt10">
+            <div class="king-block-content col-md-10">
+                <span>奖学金信息</span>
+                <table id="table1_demo1" class="table table-bordered table-hover mt10">
+                    <thead>
+                    <tr>
+                        <th>奖学金</th>
+                        <th>金额</th>
+                        <th>获奖时间</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
             </div>
-        </form>
+        </div>
+        <div class="col-md-6 mt10">
+            <div class="king-block-content col-md-10">
+                <span>谈话记录</span>
+                <table id="table2_demo1" class="table table-bordered table-hover mt10">
+                    <thead>
+                    <tr>
+                        <th>时间</th>
+                        <th>说明</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
 <script type="text/javascript">
     function backToStudentList() {
         window.location.href = site_url
+    }
+
+    $(function () {
+        let id = getQueryVariable("id")
+        var language = {
+            search: '搜索：',
+            lengthMenu: "每页显示 _MENU_ 记录",
+            zeroRecords: "没找到相应的数据！",
+            info: "分页 _PAGE_ / _PAGES_",
+            infoEmpty: "暂无数据！",
+            infoFiltered: "(从 _MAX_ 条数据中搜索)",
+            paginate: {
+                first: '首页',
+                last: '尾页',
+                previous: '上一页',
+                next: '下一页',
+            }
+        }
+        $('#table1_demo1').dataTable({
+            paging: false, //隐藏分页
+            ordering: false, //关闭排序
+            info: false, //隐藏左下角分页信息
+            searching: false, //关闭搜索
+            pageLength: 5, //每页显示几条数据
+            lengthChange: false, //不允许用户改变表格每页显示的记录数
+            language: language, //汉化
+            ajax: {
+                url: site_url + 'student/detail/scholarship/?id=' + id,
+                type: 'GET',
+                dataSrc: function (res) {
+                    return JSON.parse(res.message);
+                },
+            },
+            columns: [
+                {
+                    data: "name"
+                },
+                {
+                    data: "amount"
+                },
+                {
+                    data: "time"
+                }
+            ]
+        });
+
+        $('#table2_demo1').dataTable({
+            paging: false, //隐藏分页
+            ordering: false, //关闭排序
+            info: false, //隐藏左下角分页信息
+            searching: false, //关闭搜索
+            pageLength: 5, //每页显示几条数据
+            lengthChange: false, //不允许用户改变表格每页显示的记录数
+            language: language, //汉化
+            ajax: {
+                url: site_url + 'student/detail/chat/?id=' + id,
+                type: 'GET',
+                dataSrc: function (res) {
+                    return JSON.parse(res.message);
+                },
+            },
+            columns: [
+                {
+                    data: "time"
+                },
+                {
+                    data: "desc"
+                }
+            ]
+        });
+    })
+
+    function getQueryVariable(variable) {
+        let query = window.location.search.substring(1);
+        let vars = query.split("&");
+        for (let i = 0; i < vars.length; i++) {
+            let pair = vars[i].split("=");
+            if (pair[0] == variable) {
+                return pair[1];
+            }
+        }
+        return (false);
     }
 </script>
 </%block>
