--- a/templates/home_application/scholarship.html
+++ b/templates/home_application/scholarship.html
@@ -75,7 +75,7 @@
                 {
                     data: "id",
                     render: function (data, type, row) {
-                        return "<a href='javascript:void(0)'; onclick=deleteSholarship(" + data + ")>删除</a>"
+                        return "<a href='javascript:void(0)'; onclick=deleteSholarship('" + data + "')>删除</a>"
                     }
                 }
             ]
